corrected color contrast errors, and history message which was not showing up

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -162,7 +162,11 @@ footer nav img {
 .socialmedia a {
     text-decoration: none;
 }
-
+.socialmedia a:hover img {
+    filter: brightness(1.2); /* or use a border or background */
+    outline: 2px solid #000;
+    background-color: var(--secondary-color);
+}
 .hero {
     position: relative;
 }
@@ -180,7 +184,7 @@ h1 {
     width: 100%;
     padding: 5px;
     text-align: center;
-    opacity: 0.7;
+    opacity: 0.9;
     background-color: var(--secondary-color);
     color: #fff;
 }
@@ -192,9 +196,9 @@ article {
     height: 130px;
     text-align: left;
     padding: 16px;
-    opacity: 0.8;
+    opacity: 0.9;
     background-color: var(--accent3-color);
-    color: black;
+    color: white;
 }
 
 .hero article img {
